# lqudetion_bot

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  excution.txt  idia.txt  pyproject.toml
.clinerules/: rules.md
.clinerules/hooks/: TaskComplete
dashboard/: heatmap_dashboard.html
liquidation_module_from_repo/: aggregator.py  collector.py  config.py  connector.py  datastore.py  filter.py  health.py  models.py  normalizer.py  signal_detector.py
logs/: heatmap_observations.jsonl
src/: __init__.py  trading.py
src/adapters/: __init__.py  binance.py  binance_ws.py  liquidation_logic.py  polymarket.py
src/btc5m/: __init__.py
src/btc5m/heatmap/: __init__.py  aggregate.py  build_dashboard.py  observe.py  read_logs.py  render_html.py
src/core/: __init__.py  config.py  constants.py  decision.py  env.py  state.py
